# annotation-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/annotation_mcp/: __init__.py  coords.py  draw_primitives.py  draw_utils.py  handlers.py  handlers_detection.py  image_io.py  models.py  process.py  render.py  server.py
src/annotation_mcp/detection/: __init__.py  availability.py  barcode.py  crop.py  garbage_filter.py  ocr.py
tests/: conftest.py  test_coords.py  test_coverage_gaps.py  test_detection.py  test_draw_utils.py  test_exif_orientation.py  test_garbage_filter.py  test_handlers.py  test_heic_support.py  test_mcp_detection.py  test_pixel_integration.py  test_process.py  test_real_images.py  test_regression.py  test_render.py  test_server.py  test_server_direct.py  test_server_tools.py
