[project]
name = "annotation-mcp"
version = "0.2.0"
description = "MCP server for image annotation — draws bounding boxes, arrows, highlights, callouts, text, and circles on images; detects barcodes and text regions; crops image regions for inspection"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "annotation-mcp contributors" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "image-annotation",
    "bounding-box",
    "ocr",
    "tesseract",
    "pyzbar",
    "barcode",
    "pillow",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.27.0",
    "pillow>=11.0",
    "pillow-heif>=0.20",
    "pydantic>=2.0",
    "opencv-python-headless>=4.9",
    "pytesseract>=0.3.10",
    "pyzbar>=0.1.9",
]

[project.urls]
Homepage = "https://github.com/aschokinatgmail/annotation-mcp"
Repository = "https://github.com/aschokinatgmail/annotation-mcp"
Issues = "https://github.com/aschokinatgmail/annotation-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
annotation-mcp = "annotation_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/annotation_mcp"]

[dependency-groups]
dev = [
    "basedpyright>=1.21",
    "ruff>=0.8",
    "pytest>=8",
    "pytest-cov>=5",
]

# ─────────────────────────────────────────────────────────────────
# basedpyright - typeCheckingMode = "all"
# ─────────────────────────────────────────────────────────────────
[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.12"
pythonPlatform = "All"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]

reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportPrivateUsage = "error"
reportAny = "warning"

# ─────────────────────────────────────────────────────────────────
# ruff - select = ["ALL"]
# ─────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "D203",
    "D213",
    "CPY001",
    "FBT001",
    "FBT002",
    "TD002",
    "TD003",
    "FIX002",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ARG",
    "PLR2004",
    "SLF001",
    "D",
]
"scripts/**/*.py" = [
    "T201",
    "INP001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# ─────────────────────────────────────────────────────────────────
# pytest
# ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = [
    "error",
    # Subprocess pipes in server tests trigger ResourceWarning on close
    "ignore::ResourceWarning",
]

# ─────────────────────────────────────────────────────────────────
# coverage
# ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
